--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=caco
 # Configuração do PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/cacodb
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configurações do JPA/Hibernate
